--- a/BackEnd/WebBlog/views/pages/stat.ejs
+++ b/BackEnd/WebBlog/views/pages/stat.ejs
@@ -8,12 +8,12 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/login.css">
-    <link rel="stylesheet" href="./styles/sign_in.css">
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/stat.css">
 
 </head>
 <body>
+    <%- include('../partials/header')%>
   <table>
     <thead>
       <tr>
